# codif-coicop-bdf

./: README.md  harmonize-io-plan.md  refactor-plan.md
argo/: codif-pipeline.yaml  pipeline.yaml  rbac.yaml  ttc-pipeline.yaml
coicop-bdf-classifier/: main.py  pyproject.toml
coicop-bdf-classifier/docs/: demo_ttc.ipynb
coicop-bdf-classifier/src/: __init__.py  decide_coicop.py  predict.py  train.py
coicop-bdf-classifier/tests/: test_hierarchical_pyfunc.py
coicop-rag/: .gitignore  README.md  pyproject.toml
coicop-rag/config/: config.yaml
coicop-rag/scripts/: 0_create_vector_db.py  0_prunning_coicop.py  1_prune_annotations.py  2_run_rag.py  eval.py
coicop-rag/src/coicop_rag/: generation_tools.py  utils.py
coicop-rag/src/coicop_rag/data/: coicop_document.py  parsing.py  pruning.py
coicop-rag/src/coicop_rag/eval/: metrics.py  test_metrics.py
coicop-rag/tests/: test_llms.py
docs/: inputs-outputs.md
final-output/: main.py  pyproject.toml
preprocessing/: .gitignore  README.md  config.yaml  main.py  pyproject.toml
preprocessing/src/data/: check_data.py  load_data.py  save_data.py  string_cleaning.py
preprocessing/src/stats/: calculate_features.py
preprocessing/src/utils/: data_management.py  init_duckdb.py  load_config.py  logging.py
regex-codif/: .gitignore  README.md  pyproject.toml
regex-codif/config/: config.yaml  rules.yaml
regex-codif/src/: main.py
report/: main.py  prediction_report.qmd  pyproject.toml  report.qmd
stats-annotations/: .gitignore  README.md
stats-annotations/C/: distance_gcd_batch_cpp.cpp
stats-annotations/R/: analyse_magasins.R  fonctions.R  (+5 more)
(+17 files in other folders)
