[project]
name = "construction-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.4",
    "logging>=0.4.9.6",
    "loguru>=0.7.3",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "pyyaml>=6.0.3",
    "s3fs>=2026.1.0",
    "scikit-learn>=1.8.0",
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
